Add support for WFS 2.0 ResourceId versioning predicates. The new interface org.geoserver.data.VersioningPlugin provides for a pluggable extension point to support WFS 2.0 versioning. Some usages of FeatureId.toString()/FeatureId.getID() have been replaced by direct use of FeatureId/Identifier as appropriate in order to not lose versioning infromation when FeatureId is an instanceof ResourceId